# KlowniePortofolio

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  flake.nix  server.toml  sessions.data  uuids.txt
assets/: banner.avif  banner_low.avif
assets/CurriculumVitae/: profile.avif
assets/images/: sketch_846.avif
assets/js/: htmx_ext_preload.js  patch.js
assets/projects/BatBossIllustration/: thumbnail.avif
assets/projects/BatBossIllustration/HighRes/: sketch_877.webm
assets/projects/BatBossIllustration/LowRes/: sketch_877.webm  sketch_877_00.avif  sketch_877_01.avif  sketch_877_final.avif  sketch_877_grey.avif
assets/projects/CarbonixWorkerSuit/: thumbnail.avif
assets/projects/CarbonixWorkerSuit/HighRes/: sketch_830.webm
assets/projects/CarbonixWorkerSuit/LowRes/: sketch_829.avif  sketch_830.webm  sketch_830_15.avif
assets/projects/ClimbingExoSuit/: thumbnail.avif
assets/projects/ClimbingExoSuit/HighRes/: sketch_843.webm
assets/projects/ClimbingExoSuit/LowRes/: sketch_842.avif  sketch_843.webm  sketch_843_color.avif  sketch_843_noise.avif
assets/projects/ClimbingExoSuit3d/: thumbnail.avif
assets/projects/ClimbingExoSuit3d/LowRes/: model_006.avif  model_006_smooth_01.avif  model_006_smooth_02.avif
assets/projects/HomardRojas/: thumbnail.avif
assets/projects/HomardRojas/LowRes/: sketch_836.webm  sketch_836_06.avif
assets/projects/Intru/: thumbnail.avif
assets/projects/Intru/LowRes/: model_003_Back3quarter.avif  model_003_Front3quarter.avif  model_003_Posed.avif  model_003_Stylized_003.avif  model_03.avif
assets/projects/Saint-John/: thumbnail.avif
assets/projects/Saint-John/HighRes/: sketch_831.webm
assets/projects/Saint-John/LowRes/: sketch_831.webm  sketch_831_05.avif
assets/projects/SamuConceptCharacter/: thumbnail.avif
assets/projects/SamuConceptCharacter/LowRes/: sketch_849_08.avif  sketch_851.avif  sketch_852.avif  sketch_853.avif
assets/projects/SamuConceptIllustration/: thumbnail.avif
assets/projects/SamuConceptIllustration/HighRes/: sketch_859.webm
assets/projects/SamuConceptIllustration/LowRes/: sketch_859.webm  sketch_859_Gray.avif  sketch_859_compo.avif  sketch_859_final.avif
assets/projects/TeamBlue/: thumbnail.avif
assets/projects/TeamBlue/LowRes/: sketch_741.avif
assets/projects/TribalYellowDemon/: thumbnail.avif
assets/projects/TribalYellowDemon/LowRes/: sketch_716.avif
assets/projects/UmbrellaKnight/: thumbnail.avif
assets/projects/UrbanWhiteCrowMan/: thumbnail.avif
assets/projects/VulturesBrigadeCaptain/: thumbnail.avif
colorschemes/: Dracula.scss  GruvboxDark.scss  SolarizedDark.scss
scss/: index.scss
scss/colorschemes/: ColorSchemes.scss  Twilight.scss
self_signed_certs/: cert.pem  key.pem
src/: errors.rs  handlers.rs  macros.rs  main.rs  middleware.rs  routes.rs  templates.rs
templates/: base.html  error_404.html  fonts.html  frame_toggle.html  index.html  index.scss  interactive_name.html  macro.html  masonry.html  socials.html  testcounter.html
templates/errors/: error_404.html  error_500.html
templates/macros/: icons.html  js.html  macro.html  snipets.html
templates/partials/: AudrickYeu_CV.html  base.html  bio.html  fonts.html  frame_toggle.html  index.html  interactive_name.html  macro.html  masonry.html  socials.html  topper.html
templates/projects/: BatBossIllustration.html  CarbonixWorkerSuit.html  ClimbingExoSuit.html  ClimbingExoSuit3d.html  HomardRojas.html  Intru.html  MissingProject.html  SaintJohn.html  SamuConceptCharacter.html  SamuConceptIllustration.html  TeamBlue.html  TribalYellowDemon.html  UmbrellaKnight.html  UrbanWhiteCrowMan.html  VulturesBrigadeCaptain.html  carbonix_worker_suit.html  climbing_exo_suit.html  climbing_exo_suit_3d.html  homard_rojas.html  intru.html  missing_project.html  saint_john.html  samu_concept_character.html  team_blue.html  tribal_yellow_demon.html  umbrella_knight.html  urban_white_crow.html
uiua/: manager.ua
(+8 files in other folders)
