[package]
name = "AudrickConceptPortofolio"
version = "0.1.0"
edition = "2021"

[package.metadata.turf]
load_paths = ["scss/colorschemes"]
minify = true

[package.metadata.turf.class_names]
template = "<original_name><id>"

[package.metadata.turf.browser_targets]
chrome = [80, 1, 2]
firefox = 65
safari = [12, 3]

[features]
tls = ["axum-server/tls-rustls"]

[dependencies]

#Backend
axum = { version = "0.8.7", features = ["macros", "tokio"]}
axum-extra = { version = "0.12.2", features = ["cookie", "typed-header"] }
axum-htmx = "0.8.1"
axum-server = { version = "0.8",  default-features = false }

#templating
askama = "0.14"

#protocols
tokio = { version = "1.42", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "set-header", "compression-full", "decompression-full"] }
anyhow = "^1.0"
time = "0.3.37"

#serde
serde = { version = "1.0", features = ["derive"] }

#debuging
tracing-subscriber = "0.3.18"
tracing = "0.1.41"

#Esthetics
turf = "0.9.5"
text-to-ascii-art="0.1.10"

#toml
toml = "0.9.5"
log = "0.4.22"

#optimisation
[profile.dev.package.askama_derive]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
